fix: wrong size text-boxes for certain fields.

--- a/Style/patient_details.css
+++ b/Style/patient_details.css
@@ -50,6 +50,7 @@ h2 {
     background-color: #fff;
     border: 1px solid #ccc;
     padding: 10px;
+    height: 42px;
     border-radius: 6px;
     font-size: 16px;
 }
